--- a/TreeTracker/UI/Views/Messaging/Messages/Cell/MessagesTableViewCell.xib
+++ b/TreeTracker/UI/Views/Messaging/Messages/Cell/MessagesTableViewCell.xib
@@ -5,36 +5,56 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="MessagesTableViewCell" customModule="TreeTracker" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="49" id="KGk-i7-Jjw" customClass="MessagesTableViewCell" customModule="TreeTracker" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MESSAGE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ke-F5-2WO">
-                        <rect key="frame" x="15" y="11.666666666666664" width="290" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nM0-G3-IQY">
+                        <rect key="frame" x="194.66666666666666" y="8" width="105.33333333333334" height="33"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MESSAGE" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ke-F5-2WO">
+                                <rect key="frame" x="14" y="6" width="77.333333333333329" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemCyanColor"/>
+                        <constraints>
+                            <constraint firstItem="2ke-F5-2WO" firstAttribute="top" secondItem="nM0-G3-IQY" secondAttribute="top" constant="6" id="BFO-r5-fTR"/>
+                            <constraint firstItem="2ke-F5-2WO" firstAttribute="leading" secondItem="nM0-G3-IQY" secondAttribute="leading" constant="14" id="qwn-Af-Lit"/>
+                            <constraint firstAttribute="trailing" secondItem="2ke-F5-2WO" secondAttribute="trailing" constant="14" id="u9K-N4-7mH"/>
+                            <constraint firstAttribute="bottom" secondItem="2ke-F5-2WO" secondAttribute="bottom" constant="6" id="zV0-fZ-rfV"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="2ke-F5-2WO" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="aH7-uO-V1P"/>
-                    <constraint firstAttribute="trailing" secondItem="2ke-F5-2WO" secondAttribute="trailing" constant="15" id="byz-Wh-DOv"/>
-                    <constraint firstItem="2ke-F5-2WO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="xad-Ux-JkL"/>
+                    <constraint firstItem="nM0-G3-IQY" firstAttribute="width" relation="lessThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.7" id="Pwi-X5-liB"/>
+                    <constraint firstItem="nM0-G3-IQY" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="fEd-Dw-FCm"/>
+                    <constraint firstAttribute="trailing" secondItem="nM0-G3-IQY" secondAttribute="trailing" constant="20" placeholder="YES" id="hAc-SU-Qi4"/>
+                    <constraint firstAttribute="bottom" secondItem="nM0-G3-IQY" secondAttribute="bottom" constant="8" id="nVy-5s-eCo"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="messageBackgroundView" destination="nM0-G3-IQY" id="QuS-3E-rui"/>
                 <outlet property="messageLabel" destination="2ke-F5-2WO" id="7JI-gM-aWh"/>
             </connections>
-            <point key="canvasLocation" x="139" y="20"/>
+            <point key="canvasLocation" x="138.93129770992365" y="19.718309859154932"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemCyanColor">
+            <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
