refactor: input text view grows when text get bigger

--- a/TreeTracker/UI/Views/Messaging/Messages/Messages.storyboard
+++ b/TreeTracker/UI/Views/Messaging/Messages/Messages.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,48 +18,58 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="CLe-wz-4mm">
-                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="XdE-Cs-r0b">
+                                <rect key="frame" x="0.0" y="59" width="393" height="694"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fFl-af-x60">
+                                <rect key="frame" x="0.0" y="753" width="393" height="65"/>
                                 <subviews>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="XdE-Cs-r0b">
-                                        <rect key="frame" x="0.0" y="0.0" width="393" height="695"/>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="1000" scrollEnabled="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="HpR-Wu-UEw" userLabel="Input Text View">
+                                        <rect key="frame" x="20" y="15" width="304" height="35"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                    </tableView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="9SL-RZ-NlR">
-                                        <rect key="frame" x="0.0" y="695" width="393" height="64"/>
-                                        <subviews>
-                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="HpR-Wu-UEw" userLabel="Input Text View">
-                                                <rect key="frame" x="20" y="15" width="299" height="34"/>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                                <color key="textColor" systemColor="labelColor"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                            </textView>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sNe-HL-ePJ">
-                                                <rect key="frame" x="339" y="15" width="34" height="34"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="34" id="2nU-ep-iHV"/>
-                                                    <constraint firstAttribute="width" constant="34" id="var-zl-gNI"/>
-                                                </constraints>
-                                                <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
-                                                <connections>
-                                                    <action selector="sendMessageButtonPressed" destination="Y6W-OH-hqX" eventType="touchUpInside" id="dac-bT-kB5"/>
-                                                </connections>
-                                            </button>
-                                        </subviews>
-                                        <edgeInsets key="layoutMargins" top="15" left="20" bottom="15" right="20"/>
-                                    </stackView>
+                                        <constraints>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="eOl-FG-LCj"/>
+                                        </constraints>
+                                        <color key="textColor" systemColor="labelColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sNe-HL-ePJ">
+                                        <rect key="frame" x="339" y="15.666666666666629" width="34" height="34"/>
+                                        <color key="backgroundColor" name="PrimaryGreen"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="34" id="2nU-ep-iHV"/>
+                                            <constraint firstAttribute="width" constant="34" id="var-zl-gNI"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                        <connections>
+                                            <action selector="sendMessageButtonPressed" destination="Y6W-OH-hqX" eventType="touchUpInside" id="dac-bT-kB5"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
-                            </stackView>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="sNe-HL-ePJ" secondAttribute="trailing" constant="20" id="G06-mI-vk3"/>
+                                    <constraint firstAttribute="bottom" secondItem="HpR-Wu-UEw" secondAttribute="bottom" constant="15" id="GXt-oS-SNS"/>
+                                    <constraint firstItem="HpR-Wu-UEw" firstAttribute="centerY" secondItem="fFl-af-x60" secondAttribute="centerY" id="b3O-dS-qMr"/>
+                                    <constraint firstItem="HpR-Wu-UEw" firstAttribute="leading" secondItem="fFl-af-x60" secondAttribute="leading" constant="20" id="sM4-lX-zeg"/>
+                                    <constraint firstItem="sNe-HL-ePJ" firstAttribute="centerY" secondItem="fFl-af-x60" secondAttribute="centerY" id="sg9-Fe-JdH"/>
+                                    <constraint firstItem="HpR-Wu-UEw" firstAttribute="trailing" secondItem="sNe-HL-ePJ" secondAttribute="leading" constant="-15" id="xUI-yF-5K5"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="CLe-wz-4mm" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="PxX-ZU-AVt"/>
-                            <constraint firstItem="CLe-wz-4mm" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="bFL-AT-T2G"/>
-                            <constraint firstItem="CLe-wz-4mm" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="tEZ-t0-CmX"/>
-                            <constraint firstItem="CLe-wz-4mm" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="tcA-0A-XLX"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="fFl-af-x60" secondAttribute="trailing" id="EPU-Z8-aXg"/>
+                            <constraint firstItem="XdE-Cs-r0b" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="Erh-41-0Tx"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="fFl-af-x60" secondAttribute="bottom" id="S33-J4-7tS"/>
+                            <constraint firstItem="XdE-Cs-r0b" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="aib-7r-Gpb"/>
+                            <constraint firstItem="XdE-Cs-r0b" firstAttribute="bottom" secondItem="fFl-af-x60" secondAttribute="top" id="dtA-x7-1xB"/>
+                            <constraint firstItem="XdE-Cs-r0b" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="kvY-ko-e6H"/>
+                            <constraint firstItem="fFl-af-x60" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="yJ9-zE-dnT"/>
                         </constraints>
                     </view>
                     <connections>
@@ -73,6 +84,9 @@
         </scene>
     </scenes>
     <resources>
+        <namedColor name="PrimaryGreen">
+            <color red="0.52549019607843139" green="0.76078431372549016" blue="0.19607843137254902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="labelColor">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
