--- a/TreeTracker/UI/Views/Messaging/ChatList/Cell/ChatListTableViewCell.xib
+++ b/TreeTracker/UI/Views/Messaging/ChatList/Cell/ChatListTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,34 +11,34 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="130" id="KGk-i7-Jjw" customClass="ChatListTableViewCell" customModule="TreeTracker" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="130"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="110" id="KGk-i7-Jjw" customClass="ChatListTableViewCell" customModule="TreeTracker" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="110"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="130"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="110"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pJJ-TQ-trK">
-                        <rect key="frame" x="20" y="15" width="100" height="100"/>
+                        <rect key="frame" x="20" y="15" width="80" height="80"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="100" id="1Ut-kM-Kzy"/>
-                            <constraint firstAttribute="height" constant="100" id="Buc-V0-45Q"/>
+                            <constraint firstAttribute="width" constant="80" id="1Ut-kM-Kzy"/>
+                            <constraint firstAttribute="height" constant="80" id="Buc-V0-45Q"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TITLE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aNm-U8-pHW">
-                        <rect key="frame" x="136" y="54.666666666666657" width="164" height="21"/>
+                        <rect key="frame" x="116" y="44.666666666666664" width="184" height="20.999999999999993"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ecs-GP-ebT">
-                        <rect key="frame" x="277" y="16" width="30" height="30"/>
+                        <rect key="frame" x="281" y="13" width="26" height="26"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TrO-CH-3ll">
-                                <rect key="frame" x="5" y="5" width="20" height="20"/>
+                                <rect key="frame" x="4" y="4" width="18" height="18"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="20" id="Jki-wK-qZc"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="20" id="Rxm-i7-spM"/>
+                                    <constraint firstAttribute="height" constant="18" id="Jki-wK-qZc"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="18" id="Rxm-i7-spM"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -47,10 +47,10 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemRedColor"/>
                         <constraints>
-                            <constraint firstItem="TrO-CH-3ll" firstAttribute="top" secondItem="ecs-GP-ebT" secondAttribute="top" constant="5" id="6SV-gJ-IJD"/>
-                            <constraint firstItem="TrO-CH-3ll" firstAttribute="leading" secondItem="ecs-GP-ebT" secondAttribute="leading" constant="5" id="DXo-oc-pu8"/>
-                            <constraint firstAttribute="trailing" secondItem="TrO-CH-3ll" secondAttribute="trailing" constant="5" id="HpV-9Z-3bY"/>
-                            <constraint firstAttribute="bottom" secondItem="TrO-CH-3ll" secondAttribute="bottom" constant="5" id="vbQ-pw-cgw"/>
+                            <constraint firstItem="TrO-CH-3ll" firstAttribute="top" secondItem="ecs-GP-ebT" secondAttribute="top" constant="4" id="6SV-gJ-IJD"/>
+                            <constraint firstItem="TrO-CH-3ll" firstAttribute="leading" secondItem="ecs-GP-ebT" secondAttribute="leading" constant="4" id="DXo-oc-pu8"/>
+                            <constraint firstAttribute="trailing" secondItem="TrO-CH-3ll" secondAttribute="trailing" constant="4" id="HpV-9Z-3bY"/>
+                            <constraint firstAttribute="bottom" secondItem="TrO-CH-3ll" secondAttribute="bottom" constant="4" id="vbQ-pw-cgw"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -60,7 +60,7 @@
                     <constraint firstAttribute="trailing" secondItem="aNm-U8-pHW" secondAttribute="trailing" constant="20" id="Ize-Ap-Wo4"/>
                     <constraint firstItem="aNm-U8-pHW" firstAttribute="leading" secondItem="pJJ-TQ-trK" secondAttribute="trailing" constant="16" id="XyW-PQ-sDZ"/>
                     <constraint firstItem="pJJ-TQ-trK" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="e9y-JN-XF6"/>
-                    <constraint firstItem="ecs-GP-ebT" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="egw-sk-ztF"/>
+                    <constraint firstItem="ecs-GP-ebT" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="13" id="egw-sk-ztF"/>
                     <constraint firstAttribute="trailing" secondItem="ecs-GP-ebT" secondAttribute="trailing" constant="13" id="olR-da-RQW"/>
                 </constraints>
             </tableViewCellContentView>
