--- a/TreeTracker/UI/Views/Messaging/ChatList/ChatList.storyboard
+++ b/TreeTracker/UI/Views/Messaging/ChatList/ChatList.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -21,23 +21,55 @@
                                 <rect key="frame" x="0.0" y="59" width="393" height="793"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DaF-bF-5Cf">
+                                <rect key="frame" x="0.0" y="59" width="393" height="793"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qiL-vk-rp5">
+                                        <rect key="frame" x="156.66666666666666" y="236" width="80" height="80"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="80" id="LMP-78-Uhj"/>
+                                            <constraint firstAttribute="height" constant="80" id="c8E-CS-fhx"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NO_MESSAGES_LABEL" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="USj-0f-P2H">
+                                        <rect key="frame" x="106" y="336" width="181" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="qiL-vk-rp5" firstAttribute="bottom" secondItem="USj-0f-P2H" secondAttribute="top" constant="-20" id="9bS-uo-o2x"/>
+                                    <constraint firstItem="USj-0f-P2H" firstAttribute="centerX" secondItem="DaF-bF-5Cf" secondAttribute="centerX" id="Blg-0k-Ggn"/>
+                                    <constraint firstItem="USj-0f-P2H" firstAttribute="centerY" secondItem="DaF-bF-5Cf" secondAttribute="centerY" constant="-50" id="Uj1-Kg-EkH"/>
+                                    <constraint firstItem="qiL-vk-rp5" firstAttribute="centerX" secondItem="DaF-bF-5Cf" secondAttribute="centerX" id="xnx-Ss-Bme"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="aOp-Rr-UMb" secondAttribute="bottom" id="5FW-WE-nTV"/>
+                            <constraint firstItem="DaF-bF-5Cf" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="FIF-RN-ZLA"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="aOp-Rr-UMb" secondAttribute="trailing" id="H37-Rs-qij"/>
                             <constraint firstItem="aOp-Rr-UMb" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="NeB-wD-N8h"/>
+                            <constraint firstItem="DaF-bF-5Cf" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="TCT-wJ-Vpf"/>
                             <constraint firstItem="aOp-Rr-UMb" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="fUt-b5-f0V"/>
+                            <constraint firstAttribute="bottom" secondItem="DaF-bF-5Cf" secondAttribute="bottom" id="fWr-ez-oeg"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="DaF-bF-5Cf" secondAttribute="trailing" id="jxL-2v-nbl"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="chatListTableView" destination="aOp-Rr-UMb" id="4iO-xn-0sz"/>
+                        <outlet property="noMessagesImageView" destination="qiL-vk-rp5" id="Wvd-ih-jdG"/>
+                        <outlet property="noMessagesLabel" destination="USj-0f-P2H" id="cbc-UK-2JA"/>
+                        <outlet property="noMessagesView" destination="DaF-bF-5Cf" id="SxZ-bV-ALq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="140" y="-2"/>
+            <point key="canvasLocation" x="139.69465648854961" y="-2.1126760563380285"/>
         </scene>
     </scenes>
     <resources>
