--- a/TreeTracker/UI/Views/Messaging/Survey/Cell/SurveyTableViewCell.xib
+++ b/TreeTracker/UI/Views/Messaging/Survey/Cell/SurveyTableViewCell.xib
@@ -9,18 +9,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="90" id="RLu-kB-aps" customClass="SurveyTableViewCell" customModule="TreeTracker" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="437" height="90"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="80" id="RLu-kB-aps" customClass="SurveyTableViewCell" customModule="TreeTracker" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="437" height="80"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="RLu-kB-aps" id="dhu-pd-va6">
-                <rect key="frame" x="0.0" y="0.0" width="437" height="90"/>
+                <rect key="frame" x="0.0" y="0.0" width="437" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QdT-4K-aLz">
-                        <rect key="frame" x="20" y="10" width="397" height="70"/>
+                        <rect key="frame" x="20" y="10" width="397" height="60"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TITLE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e2h-ID-6vf">
-                                <rect key="frame" x="176.66666666666666" y="24.666666666666664" width="44" height="21"/>
+                                <rect key="frame" x="176.66666666666666" y="19.666666666666668" width="44" height="21.000000000000004"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
