--- a/TreeTracker/UI/Views/Messaging/Survey/Survey.storyboard
+++ b/TreeTracker/UI/Views/Messaging/Survey/Survey.storyboard
@@ -18,25 +18,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="QUESTION" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CWD-Wf-Uuh">
-                                <rect key="frame" x="25" y="99" width="343" height="21"/>
+                                <rect key="frame" x="25" y="104" width="343" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rud-87-i7v">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rud-87-i7v" customClass="ActionButton" customModule="TreeTracker" customModuleProvider="target">
                                 <rect key="frame" x="20" y="738" width="353" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="VID-EN-GT6"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="NEXT">
-                                    <backgroundConfiguration key="background">
-                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    </backgroundConfiguration>
-                                </buttonConfiguration>
+                                <buttonConfiguration key="configuration" style="plain" title="NEXT"/>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="vjy-i4-zIP">
-                                <rect key="frame" x="0.0" y="140" width="393" height="588"/>
+                                <rect key="frame" x="0.0" y="145" width="393" height="583"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
                         </subviews>
@@ -44,7 +40,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="Rud-87-i7v" firstAttribute="top" secondItem="vjy-i4-zIP" secondAttribute="bottom" constant="10" id="0IC-2y-Oge"/>
-                            <constraint firstItem="CWD-Wf-Uuh" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="40" id="4r7-bR-M68"/>
+                            <constraint firstItem="CWD-Wf-Uuh" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="45" id="4r7-bR-M68"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Rud-87-i7v" secondAttribute="trailing" constant="20" id="9iO-WW-dFO"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="Rud-87-i7v" secondAttribute="bottom" constant="20" id="BZG-bB-4n1"/>
                             <constraint firstItem="vjy-i4-zIP" firstAttribute="top" secondItem="CWD-Wf-Uuh" secondAttribute="bottom" constant="20" id="HE6-c7-qgl"/>
